ci.yml script fix ln 9

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 build:
   stage: build
   script:
-    ./gradlew assemble
+    ./gradlew bootJar
   artifacts:
     paths:
       - build/libs/*.jar
