--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+# JPA Props
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+
+DB_HOST=localhost:3306
+DB_NAME=autos
+DB_USER=root
+
+spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PWD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
