--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ stages:
   - test
   - codeCoverage
   - docker
+  - heroku
 build:
   image: adoptopenjdk:11
   stage: build
@@ -57,3 +58,13 @@ docker:
     - docker push "$CI_REGISTRY_IMAGE":"$CI_PIPELINE_IID"
     - docker tag "$CI_REGISTRY_IMAGE":"$CI_PIPELINE_IID" "$CI_REGISTRY_IMAGE":"latest"
     - docker push "$CI_REGISTRY_IMAGE":"latest"
+heroku:
+  stage: heroku
+  image: ruby:latest
+  script:
+      - apt-get update -qy
+      - apt-get install -y ruby-dev
+      - gem install dpl
+      - dpl --provider=heroku --app=vw-autos-api --api-key=$HEROKU_API
+  only:
+      - master
