--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,9 @@ heroku:
 deploy:
   stage: deploy
   image: registry.gitlab.com/galv-vmw-apr-2021/capstone/base-aws-eks-image:latest
+  needs:
+    - build
+    - test
   before_script:
     - export IMAGE="$CI_REGISTRY_IMAGE":"$CI_PIPELINE_IID"
     - aws configure set region us-west-2
